# fastapi-basic

./: docker-compose.local.yml  docker-compose.yml  main.py  pyproject.toml
project/: Dockerfile  main.py  pyproject.toml
